# avro-schema-registry

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml
migrations/2018-12-13-153527_create_subjects/: up.sql
migrations/2018-12-14-163507_create_schemas/: up.sql
migrations/2018-12-16-123727_create_schema_versions/: up.sql
migrations/2018-12-18-105635_create_configs/: up.sql
src/: lib.rs  main.rs
src/api/: compatibility.rs  configs.rs  errors.rs  mod.rs  schemas.rs  subjects.rs  version.rs
src/app/: mod.rs
src/db/: connection.rs  mod.rs
src/db/handlers/: configs.rs  mod.rs  schemas.rs  subjects.rs
src/db/models/: configs.rs  mod.rs  schema.rs  schema_versions.rs  schemas.rs  subjects.rs
src/health/: mod.rs
src/middleware/: mod.rs  verify_auth.rs  verify_headers.rs
tests/: compatibility.rs  config.rs  schemas.rs  server.rs  subject.rs  tests.rs
tests/common/: mod.rs  request.rs  server.rs  settings.rs
tests/db/: cleanup.rs  config.rs  connection.rs  mod.rs  schema.rs  subject.rs
tests/fixtures/: schema.json  schema2.json  schema_backward_compatible.json  schema_forward_compatible.json  schema_full_compatible.json  transitive1.json  transitive2.json  transitive3.json
