[package]
name = "avro-schema-registry"
version = "0.1.4"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2021"
autotests = false

[badges]
travis-ci = { repository = "nlopes/avro-schema-registry", branch = "master" }

[[test]]
name = "integration"
path = "tests/tests.rs"

[lib]
name = "avro_schema_registry"
path = "src/lib.rs"

[[bin]]
name = "avro-schema-registry"
path = "src/bin/main.rs"
test = false
doc = false

[dependencies]
actix = "0.13"
actix-threadpool = "0.3"
actix-web = "4.3"
actix-web-prom = "0.7"
avro-rs = "0.13"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
env_logger = "0.10"
futures = "0.3"
json = "0.12"
log = "0.4"
# sha2 has to stay at version 0.9 until avro-rs upgrades their version of digest to 0.10
sha2 = "=0.9"
sentry = { version = "0.31", features = ["panic"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.44"

[dev-dependencies]
actix-rt = "2.8"
actix-test = "0.1.1"
awc = "3.1.1"
regex = "1.9"
