[package]
name = "avro-schema-registry"
version = "0.1.4"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2021"
autotests = false

[badges]
travis-ci = { repository = "nlopes/avro-schema-registry", branch = "master" }

[[test]]
name = "integration"
path = "tests/tests.rs"

[lib]
name = "avro_schema_registry"
path = "src/lib.rs"

[[bin]]
name = "avro-schema-registry"
path = "src/bin/main.rs"
test = false
doc = false

[dependencies]
actix = "0.13"
actix-threadpool = "0.3"
actix-web = "4.4"
actix-web-prom = "0.8"
avro-rs = { version = "0.15", package = "apache-avro" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
env_logger = "0.11"
futures = "0.3"
json = "0.12"
log = "0.4"
sha2 = "0.10"
sentry = { version = "0.32", features = ["panic"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.10"
actix-test = "0.1"
awc = "3.4"
regex = "1.10"
