[package]
name = "avro-schema-registry"
version = "0.1.4"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2021"
autotests = false

[badges]
travis-ci = { repository = "nlopes/avro-schema-registry", branch = "master" }

[[test]]
name = "integration"
path = "tests/tests.rs"

[lib]
name = "avro_schema_registry"
path = "src/lib.rs"

[[bin]]
name = "avro-schema-registry"
path = "src/bin/main.rs"
test = false
doc = false

[dependencies]
actix = "0.13"
actix-threadpool = "0.3"
actix-web = "4"
actix-web-prom = "0.9"
avro-rs = { git = "https://github.com/apache/avro", package = "apache-avro", version = "0.18" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono", "r2d2"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
sha2 = "0.10"
sentry = { version = "0.36", features = ["panic"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
actix-rt = "2"
actix-test = "0.1"
awc = "3"
regex = "1"
